# agentseal

./: .dockerignore  .gitignore  AGENTS.md  AGENT_GET_STARTED.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml  docs.yml  e2e-test.yml
.sisyphus/plans/: 2026-04-08-002-v02-agent-seal-implementation-plan.md  2026-04-08-003-multi-platform-multi-sandbox-architecture.md
crates/agent-seal/: Cargo.toml
crates/agent-seal-compiler/: Cargo.toml
crates/agent-seal-compiler/src/: assemble.rs  compile.rs  embed.rs  lib.rs  main.rs  nuitka.rs  pyinstaller.rs
crates/agent-seal-compiler/src/backend/: golang.rs  mod.rs  nuitka.rs  pyinstaller.rs
crates/agent-seal-core/: Cargo.toml
crates/agent-seal-fingerprint/: Cargo.toml
crates/agent-seal-launcher/: Cargo.toml
crates/agent-seal-proxy/: Cargo.toml
crates/agent-seal-server/: Cargo.toml
crates/snapfzz-seal/: Cargo.toml
crates/snapfzz-seal-compiler/: Cargo.toml
crates/snapfzz-seal-core/: Cargo.toml
crates/snapfzz-seal-fingerprint/: Cargo.toml
crates/snapfzz-seal-launcher/: Cargo.toml  build.rs
crates/snapfzz-seal-server/: Cargo.toml
docs/: AGENT_STATUS.md  ENHANCEMENT_SPEC.md  IMPLEMENTATION_REPORT.md  ORACLE_EVALUATION.md  book.toml
docs/agent-specs/: agent-1-markers-decoys.md  agent-2-shamir.md  agent-3-anti-analysis.md  (+2 more)
e2e-tests/: Dockerfile  docker-compose.yml  full_interaction_test.sh  quick_test.sh  run_tests.sh
scripts/: build_launcher.sh  demo.sh
website/: docusaurus.config.ts  package-lock.json  package.json
(+152 files in other folders)
