[package]
name = "agent-seal-compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-seal-core = { path = "../agent-seal-core" }
agent-seal-fingerprint = { path = "../agent-seal-fingerprint" }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
